--- a/stock.css
+++ b/stock.css
@@ -13,6 +13,7 @@ input[type=number]::-webkit-outer-spin-button {
     height: 50px;
     width: 80px;
     background-color: rgb(236, 57, 57);
+    font-weight: bold;
     font-size: 1.5vh;
     border-radius: 10px;
 }
